Modernize Saxon API usage, enable stricter warnings, remove dead code
- pom.xml: enable -Xlint:deprecation,rawtypes,unchecked; adjust dependency
  versions accordingly.
- Migrate off deprecated Saxon/JDK APIs across ACL, FITS, FOXCreate,
  FOXUpdate, FedoraInteract, FedoraTransaction, FedoraUser,
  FedoraLoadCollectionHierarchy, HandleAssignment, Locking, Mail, Owner,
  Persist, ResourceMapping, UpdateCollections, Collection, CMD,
  CMDCollection, DoorKeeper: URIResolver -> Saxon's ResourceResolver,
  setMessageListener -> setMessageHandler, raw collection types -> generics,
  deprecated URL(String) constructor -> URI.create(...).toURL().
- Remove the gsearch-based Index/IndexRollback actions: gsearch is no longer
  part of the stack, and triple-store/Solr reindexing now happens
  automatically on change.
- Remove confirmed-dead unused locals/fields: FedoraInteract's unused SIP
  capture, DrupalSync's discarded XMLConfiguration return value,
  PurgeUpdates' redundant SIP capture, Flow's write-only `base` field (and
  the now-unreachable File/Source-only constructor overloads it dragged
  along), EPICHandleCreation's namespace/prefix locals superseded by the
  multi-namespace loop and PIDService's own handlePrefix, and the dead
  loc/isTest locals in EPICHandleCreation.rollback().
- Fix "static field accessed via instance reference" warnings in Context and
  WorkspaceLogSetup.
- Fix a fixture/assertion mismatch in DrupalSyncTest, and add
  ResourceResolverTest covering ACL's JarResourceResolver.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>